--- a/404.html
+++ b/404.html
@@ -17,9 +17,18 @@ layout: default
   }
 </style>
 
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+  <!-- Start error section  -->
+  <section id="mu-error">
+    <div class="container">
+      <div class="row">
+       <div class="col-md-12">
+          <div class="mu-error-area">
+            <p>Oops! The page you requested was not found!</p>
+            <span>The page you are looking for is not available or has been removed or changed.</span>
+            <h2>404</h2>
+            <a class="mu-post-btn" href="/index.html" alt="home page">GO TO HOME</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
