adding authors and fixing styling

--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@ layout: default
             <p>Oops! The page you requested was not found!</p>
             <span>The page you are looking for is not available or has been removed or changed.</span>
             <h2>404</h2>
-            <a class="mu-post-btn" href="/index.html" alt="home page">GO TO HOME</a>
+            <a class="mu-post-btn" href="{{ "/" | absolute_url }}" alt="home page">GO TO HOME</a>
           </div>
         </div>
       </div>
